--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "main": "src/index.js",
   "exports": {
+    ".": "./src/index.js",
     "./vue": "./dist/vitePluginSvgIcon.umd.js"
   },
   "dependencies": {
