--- a/package.json
+++ b/package.json
@@ -6,6 +6,15 @@
     "build": "vue-cli-service build --target lib --name vitePluginSvgIcon --dest dist src/main.js",
     "lint": "vue-cli-service lint"
   },
+  "keywords": [
+    "vue",
+    "vite",
+    "plugin",
+    "vite-plugin",
+    "svg",
+    "svg-icon",
+    "component"
+  ],
   "author": "dumplings0415@gmail.com",
   "main": "src/index.js",
   "exports": {
@@ -18,6 +27,7 @@
     "vue": "^3.0.0",
     "xml2js": "^0.4.23"
   },
+  "license": "MIT",
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.10.0",
     "@vue/cli-plugin-babel": "~4.5.0",
